update nav bars

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
             rel="stylesheet"
         />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap"
+            rel="stylesheet"
+        />
         <title>Henry Library | Home</title>
     </head>
     <body>
