--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
@@ -18,7 +18,11 @@
             href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap"
             rel="stylesheet"
         />
-        <title>Henry Library | Home</title>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap"
+            rel="stylesheet"
+        />
+        <title>Home | Henry Library</title>
     </head>
     <body>
         <div id="root"></div>
