--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,7 @@
         />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link
-            href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
-            rel="stylesheet"
-        />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
             rel="stylesheet"
         />
         <link
