update home section and doc titles

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
             href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap"
             rel="stylesheet"
         />
-        <title>Home | Henry Library</title>
+        <title>Henry Library</title>
     </head>
     <body>
         <div id="root"></div>
